# KinectFusionLib

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: data_types.h
src/: kinectfusion.cpp  test.cpp
